# clawhermesmanus

./: Dockerfile  LICENSE  README.md  docker-compose.yml  install.sh  pyproject.toml  run-local.sh
.github/workflows/: deploy.yml
configs/: config.toml.template
scripts/: run-local.sh
