[project]
name = "clawhermesmanus"
version = "0.1.0"
description = "Hybrid AI agent: OpenClaw + Hermes + OpenManus"
readme = "README.md"
requires-python = ">=3.11"
license = { text = "MIT" }
authors = [{ name = "Wallesters-org" }]

dependencies = [
  "anthropic>=0.40",
  "openai>=1.50",
  "google-generativeai>=0.8",
  "ollama>=0.4",
  "httpx>=0.27",
  "pydantic>=2.9",
  "pydantic-settings>=2.5",
  "tomli>=2.0",
  "typer>=0.12",
  "rich>=13.9",
  "loguru>=0.7",
  "asyncpg>=0.30",
  "redis>=5.1",
  "sqlalchemy>=2.0",
  "fastapi>=0.115",
  "uvicorn[standard]>=0.32",
  "playwright>=1.48",
  "PyGithub>=2.4",
  "python-telegram-bot>=21.6",
  "discord.py>=2.4",
  "slack-sdk>=3.33",
  "apscheduler>=3.10",
]

[project.optional-dependencies]
dev = [
  "ruff>=0.7",
  "pytest>=8.3",
  "pytest-asyncio>=0.24",
  "mypy>=1.13",
]
all = []

[project.scripts]
chm = "chm.__main__:app"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/chm"]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B", "SIM"]
